# kitty-code

./: .gitignore  README.md  pyproject.toml
src/kitty/: __init__.py  bridge_runner.py  cloudflare.py  validation.py
src/kitty/auth/: __init__.py  oauth_session.py  openai_oauth.py  pkce.py
src/kitty/bridge/: config.py  keys.py  manage.py  server.py  service.py  state.py
src/kitty/bridge/gemini/: translator.py
src/kitty/bridge/messages/: translator.py
src/kitty/bridge/responses/: translator.py
src/kitty/cli/: auth_cmd.py  cleanup_cmd.py  launcher.py  main.py  profile_cmd.py  router.py  setup_cmd.py
src/kitty/credentials/: store.py
src/kitty/launchers/: claude.py
src/kitty/profiles/: resolver.py  schema.py  store.py
src/kitty/providers/: __init__.py  anthropic.py  azure.py  base.py  custom_openai.py  mimo.py  ollama.py  openai.py  openai_subscription.py  opencode.py  openrouter.py  registry.py  vertex.py  zai.py
src/kitty/tui/: menu.py  prompts.py
tests/: conftest.py  test_balancing_resolver.py  test_balancing_schema.py  test_balancing_store.py  test_claude_settings_override.py  test_cli_log_file.py  test_debug_log_path.py  test_profile_schema.py  test_provider_base.py  test_provider_custom_openai.py  test_provider_list_sync.py  test_provider_mimo.py  test_provider_ollama.py  test_provider_opencode.py  test_provider_registry.py  test_validation.py
tests/auth/: test_oauth_session.py  test_openai_oauth.py  test_pkce.py
tests/bridge/: test_access_logging.py  test_all_protocol_routing.py  test_api_key_auth.py  test_balancing_server.py  test_bridge_config.py  test_bridge_management.py  test_bridge_server.py  test_bridge_server_claude_e2e.py  test_bridge_state.py  test_circuit_breaker.py  test_compaction.py  test_connection_retries.py  test_host_port_config.py  test_rate_limit_circuit_breaker.py  test_reasoning_effort.py  test_service_install.py  test_tls_support.py  test_upstream_error_translation.py
tests/cli/: test_auth_cmd.py  test_cleanup_cmd.py
tests/providers/: test_openai_subscription.py  test_reasoning_effort.py
tests/tui/: test_menu.py  test_profile_menu.py  test_prompts.py  test_setup_wizard.py
